// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<OrderTotals/> render() should render as loading 1`] = `
<dl
  class="row text-left mb-0"
>
  <dt
    class="col-7 mb-2 grey"
  >
    Subtotal
  </dt>
  <dd
    class="col-5 mb-2 text-right value text-muted"
  >
    <span>
      $1.00
    </span>
  </dd>
  <dt
    class="col-7 mb-2 grey"
  >
    Discounts
  </dt>
  <dd
    class="col-5 mb-2 text-right value text-muted"
  >
    —
  </dd>
  <dt
    class="col-7 mb-2 grey"
  >
    Tax
  </dt>
  <dd
    class="col-5 mb-2 text-right value text-muted"
  >
    <span>
      $0.20
    </span>
  </dd>
  <dt
    class="col-7 mb-2 grey"
  >
    <span>
      Total available to refund
    </span>
  </dt>
  <dd
    class="col-5 mb-2 text-right value"
  >
    <span>
      $1.20
    </span>
  </dd>
</dl>
`;

exports[`<OrderTotals/> render() should render as not loading 1`] = `
<dl
  class="row text-left mb-0"
>
  <dt
    class="col-7 mb-2 grey"
  >
    Subtotal
  </dt>
  <dd
    class="col-5 mb-2 text-right value"
  >
    <span>
      $1.00
    </span>
  </dd>
  <dt
    class="col-7 mb-2 grey"
  >
    Discounts
  </dt>
  <dd
    class="col-5 mb-2 text-right value"
  >
    —
  </dd>
  <dt
    class="col-7 mb-2 grey"
  >
    Tax
  </dt>
  <dd
    class="col-5 mb-2 text-right value"
  >
    <span>
      $0.20
    </span>
  </dd>
  <dt
    class="col-7 mb-2 grey"
  >
    <span>
      Total available to refund
    </span>
  </dt>
  <dd
    class="col-5 mb-2 text-right value"
  >
    <span>
      $1.20
    </span>
  </dd>
</dl>
`;

exports[`<OrderTotals/> render() should render with shipping line 1`] = `
<dl
  class="row text-left mb-0"
>
  <dt
    class="col-7 mb-2 grey"
  >
    Subtotal
  </dt>
  <dd
    class="col-5 mb-2 text-right value"
  >
    <span>
      $1.00
    </span>
  </dd>
  <dt
    class="col-7 grey mt-2"
  >
    <label
      class="d-inline"
      for="shipping"
    >
      Shipping
       
      <span>
        (
        <span>
          $9.99
        </span>
         
        remaining)
      </span>
    </label>
  </dt>
  <dd
    class="col-5 mb-2 text-right value"
  >
    <div
      class="container text-right"
    >
      <span
        class="wrapper group horizontal"
      >
        <span
          class="prefix"
        >
          $
        </span>
        <input
          class="input"
          id="shipping"
          max="9.99"
          min="0"
          required=""
          step="0.01"
          type="number"
          value="9.99"
        />
        <span
          class="controls group vertical"
        >
          <button
            class="wrapper button wrapper small fill secondary small top isDisabled"
            disabled=""
            type="button"
          >
            <i
              class="material-icons icon"
            >
              arrow_drop_up
            </i>
          </button>
          <button
            class="wrapper button wrapper small fill secondary small bottom"
            type="button"
          >
            <i
              class="material-icons icon"
            >
              arrow_drop_down
            </i>
          </button>
        </span>
      </span>
    </div>
  </dd>
  <dt
    class="col-7 mb-2 grey"
  >
    Discounts
  </dt>
  <dd
    class="col-5 mb-2 text-right value"
  >
    —
  </dd>
  <dt
    class="col-7 mb-2 grey"
  >
    Tax
  </dt>
  <dd
    class="col-5 mb-2 text-right value"
  >
    <span>
      $0.20
    </span>
  </dd>
  <dt
    class="col-7 mb-2 grey"
  >
    <span>
      Total available to refund
    </span>
  </dt>
  <dd
    class="col-5 mb-2 text-right value"
  >
    <span>
      $1.20
    </span>
  </dd>
</dl>
`;

exports[`<OrderTotals/> render() should show an informative tooltip when hasMultipleGateways 1`] = `
<div
  class="tooltip-inner"
  role="tooltip"
>
  This order has multiple transactions with different payment providers. To issue a full refund, please go to Shopify.
</div>
`;
